Utils.Net * Extract interfaces from managers.

--- a/Utils.Net/Utils.Net.csproj
+++ b/Utils.Net/Utils.Net.csproj
@@ -83,6 +83,9 @@
     <Compile Include="Interactivity\Triggers\EventTrigger.cs" />
     <Compile Include="Interactivity\Triggers\Trigger.cs" />
     <Compile Include="Managers\DBConnectionManager.cs" />
+    <Compile Include="Interfaces\INavigationManager.cs" />
+    <Compile Include="Interfaces\IMailManager.cs" />
+    <Compile Include="Interfaces\IDBConnectionManager.cs" />
     <Compile Include="Managers\MailManager.cs" />
     <Compile Include="Managers\NavigationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -131,5 +134,6 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
