Add nuget and markdown generator executables. Add deployer script to build, generate documentation, pack and push to NuGet.org.

--- a/Utils.Net/Utils.Net.csproj
+++ b/Utils.Net/Utils.Net.csproj
@@ -102,7 +102,7 @@
     <None Include="Settings.StyleCop" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TODO.txt" />
+    <None Include="TODO.txt" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Controls\Styles\NumericBox.xaml">
