--- a/Utils.NetTests/Utils.NetTests.csproj
+++ b/Utils.NetTests/Utils.NetTests.csproj
@@ -76,9 +76,13 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Adorners\SortAdornerTests.cs" />
     <Compile Include="Common\EventArgsTests.cs" />
     <Compile Include="Common\RelayCommandTests.cs" />
     <Compile Include="Controls\NumericBoxTests.cs" />
+    <Compile Include="Controls\TextBoxTests.cs" />
+    <Compile Include="Controls\ToolTipTests.cs" />
+    <Compile Include="Controls\VirtualizingWrapPanelTests.cs" />
     <Compile Include="Converters\CombiningConverterTests.cs" />
     <Compile Include="Converters\InverseBooleanConverterTests.cs" />
     <Compile Include="Converters\MultiBooleanConverterTests.cs" />
@@ -90,6 +94,7 @@
       <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
     </Compile>
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Helpers\WPFHelperTests.cs" />
     <Compile Include="Interactivity\AttachedObjectTests.cs" />
     <Compile Include="Interactivity\Behaviors\AutoCompleteBehaviorTests.cs" />
     <Compile Include="Interactivity\Behaviors\GridViewResizeBehaviorTests.cs" />
@@ -99,7 +104,9 @@
     <Compile Include="Interactivity\Triggers\EventTriggerTests.cs" />
     <Compile Include="Managers\DBConnectionManagerTests.cs" />
     <Compile Include="Managers\NavigationManagerTests.cs" />
+    <Compile Include="Dialogs\ProgressDialogTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Dialogs\SimpleInputDialogTests.cs" />
     <Compile Include="UITester.cs" />
     <Compile Include="ViewModels\CheckableItemViewModelTests.cs" />
     <Compile Include="ViewModels\TreeItemViewModelTests.cs" />
