Utils.Net * Small refactoring for better code coverage * Fix bug in TreeViewExtensionBehavior's SelectedItem * Add Utils.Net.nuspec to the project

--- a/Utils.Net/Utils.Net.csproj
+++ b/Utils.Net/Utils.Net.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <None Include=".editorconfig" />
     <None Include="Settings.StyleCop" />
+    <None Include="Utils.Net.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <None Include="TODO.txt" />
