--- a/Utils.Net/Utils.Net.csproj
+++ b/Utils.Net/Utils.Net.csproj
@@ -79,6 +79,9 @@
     <Compile Include="Dialogs\SimpleInputDialog.xaml.cs">
       <DependentUpon>SimpleInputDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\TutorialDialog.xaml.cs">
+      <DependentUpon>TutorialDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\CollectionExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="GlobalSuppressions.cs" />
@@ -101,13 +104,15 @@
     <Compile Include="Interfaces\INavigationManager.cs" />
     <Compile Include="Interfaces\IMailManager.cs" />
     <Compile Include="Interfaces\IDBConnectionManager.cs" />
+    <Compile Include="Interfaces\ITutorialManager.cs" />
     <Compile Include="Managers\MailManager.cs" />
     <Compile Include="Managers\NavigationManager.cs" />
+    <Compile Include="Managers\TutorialManager.cs" />
+    <Compile Include="Interfaces\Tutorial\ITutorialItem.cs" />
+    <Compile Include="Managers\Tutorial\TutorialItem.cs"/>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\CheckableItemViewModel.cs" />
-    <Compile Include="ViewModels\TreeItemViewModel.cs">
-      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
-    </Compile>
+    <Compile Include="ViewModels\TreeItemViewModel.cs"/>
     <Compile Include="ViewModels\ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -146,6 +151,10 @@
     <Page Include="Dialogs\SimpleInputDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Dialogs\TutorialDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Styles\ButtonStyles.xaml">
       <Generator>MSBuild:Compile</Generator>
