--- a/Utils.NetTests/Utils.NetTests.csproj
+++ b/Utils.NetTests/Utils.NetTests.csproj
@@ -87,9 +87,7 @@
     <Compile Include="Controls\ExpanderTests.cs" />
     <Compile Include="Controls\NumericBoxTests.cs" />
     <Compile Include="Controls\TextBoxTests.cs" />
-    <Compile Include="Controls\ToggleButtonTests.cs">
-      <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
-    </Compile>
+    <Compile Include="Controls\ToggleButtonTests.cs"/>
     <Compile Include="Controls\ToolTipTests.cs" />
     <Compile Include="Controls\VirtualizingWrapPanelTests.cs" />
     <Compile Include="Converters\CombiningConverterTests.cs" />
@@ -100,9 +98,7 @@
     <Compile Include="Converters\TypeOfConverterTests.cs" />
     <Compile Include="Dialogs\SettingsDialogTests.cs" />
     <Compile Include="Extensions\CollectionExtensionsTests.cs" />
-    <Compile Include="Extensions\EnumerableExtensionsTests.cs">
-      <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
-    </Compile>
+    <Compile Include="Extensions\EnumerableExtensionsTests.cs"/>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Helpers\RelativeFontSizeHelperTests.cs" />
     <Compile Include="Helpers\WPFHelperTests.cs" />
@@ -118,8 +114,10 @@
     <Compile Include="Managers\DBConnectionManagerTests.cs" />
     <Compile Include="Managers\NavigationManagerTests.cs" />
     <Compile Include="Dialogs\ProgressDialogTests.cs" />
+    <Compile Include="Managers\TutorialManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dialogs\SimpleInputDialogTests.cs" />
+    <Compile Include="Dialogs\TutorialDialogTests.cs"/>
     <Compile Include="UITester.cs" />
     <Compile Include="ViewModels\CheckableItemViewModelTests.cs" />
     <Compile Include="ViewModels\TreeItemViewModelTests.cs" />
