--- a/Utils.Net/Utils.Net.csproj
+++ b/Utils.Net/Utils.Net.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -100,6 +100,7 @@
     <Compile Include="Interactivity\TriggerActions\TriggerAction.cs" />
     <Compile Include="Interactivity\Triggers\EventTrigger.cs" />
     <Compile Include="Interactivity\Triggers\Trigger.cs" />
+    <Compile Include="IO\FileUtils.cs" />
     <Compile Include="Managers\DBConnectionManager.cs" />
     <Compile Include="Interfaces\INavigationManager.cs" />
     <Compile Include="Interfaces\IMailManager.cs" />
